# cograsim

./: Makefile  README.md  cograsim
lib/cogli2/: .cproject  .project  CHANGELOG.md  CMakeLists.txt  Camera.cpp  Camera.h  Cogli2.cpp  Cogli2.h  Lighting.cpp  Lighting.h  README.md  cl_arguments.h  dependencies.txt  main.cpp
lib/cogli2/Actions/: ActionBuilder.cpp  ActionBuilder.h  BaseAction.cpp  BaseAction.h  Rotation.cpp  Rotation.h  Spin.cpp  Spin.h  Translation.cpp  Translation.h
lib/cogli2/Drawables/: Arrow.cpp  Arrow.h  Cylinder.cpp  Cylinder.h  DHS.cpp  DHS.h  DNA.cpp  DNA.h  Drawable.cpp  Drawable.h  Group.cpp  Group.h  Icosahedron.cpp  Icosahedron.h  PatchyParticle.cpp  PatchyParticle.h  Scene.cpp  Scene.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
lib/cogli2/Drawers/: Drawer.cpp  Drawer.h  OGLDrawer.cpp  OGLDrawer.h  PovDrawer.cpp  PovDrawer.h
lib/cogli2/OGL/: OGLManager.cpp  OGLManager.h  Shader.cpp  Shader.h  utils.h
lib/cogli2/OGL/Assets/Shaders/: axes.fs  axes.vs  shape.fs  shape.vs  text.fs  text.vs
lib/cogli2/OGL/Shapes/: Mesh.cpp  Mesh.h  OGLCone.cpp  OGLCone.h  OGLCylinder.cpp  OGLCylinder.cpp.bk  OGLCylinder.h  OGLIcosahedron.cpp  OGLIcosahedron.h  OGLSphere.cpp  OGLSphere.h
lib/cogli2/Parsers/: DNAParser.cpp  DNAParser.h  IcoParser.cpp  IcoParser.h  IoxDNAParser.cpp  IoxDNAParser.h  LevyParser.cpp  LevyParser.h  MGLParser.cpp  MGLParser.h  ManfredoParser.cpp  ManfredoParser.h  NathanParser.cpp  NathanParser.h  Parser.cpp  Parser.h  PatchyParser.cpp  PatchyParser.h  RBCParser.cpp  RBCParser.h  ShellParser.cpp  ShellParser.h  StarrParser.cpp  StarrParser.h  TEPParser.cpp  TEPParser.h
lib/cogli2/Utils/: Generic.cpp  Generic.h  Logging.cpp  Logging.h  MathHelper.cpp  MathHelper.h  StringHelper.cpp  StringHelper.h
lib/cogli2/Utils/BSpline/: BSpline.cpp  BSplineBase.h  CMakeLists.txt
lib/cogli2/glad/include/glad/: glad.h
lib/cogli2/glad/src/: glad.c
lib/cogli2/glfw/: CMakeLists.txt
lib/cogli2/gltext/: gltext.h
lib/cogli2/povray/: DNARibbon.cpp  DNARibbon.h  PovManager.cpp  PovManager.h
lib/oxDNA/EXAMPLES/PSEUDOKNOT/OPT1/: inputrna  rna.txt  rna_trajectory.dat.xyz  trajectory.dat.xyz
lib/oxDNA/UTILS/: 20.conf  20.top  dna.txt
lib/oxDNA/src/Lists/: SpatialHash.cpp  SpatialHash.h
molecules/1bna/: 1bna.pdb.oxdna
molecules/1rnk/: 1rnk.pdb.oxdna  1rnk.pdb.top  input_200  input_50
src/: PDB_Downloader.sh  cograsim.cpp  create-conf.py  sim.sh  vis.sh
